# hypervis

./: Cargo.toml
src/: main.rs  mesh4.rs
src/alg/: bivec4.rs  quadvec4.rs  trivec4.rs  vec4.rs
src/context/: mod.rs
src/context/graphics/: slice_pipeline.rs  triangle_list_pipeline.rs  vertex4.rs
src/geometry/: cell120.rs  cell600.rs  mod.rs
