[package]
name = "hypervis"
version = "0.1.0"
authors = ["Tyler Zhang <tianlinzhang@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.20"
wgpu = "0.4"
anyhow = "1.0"
glsl-to-spirv = "0.1"
cgmath = "0.17"
mint = "0.5"
hsl = "0.1"
rand = "0.7"
winapi = { version = "0.3", features = ["heapapi", "processthreadsapi"] }

[profile.dev]
panic = "abort"
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
opt-level = "z" # "s" might work better sometimes
codegen-units = 1